Fix overlapping borders, fix font-size for mobiles.

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -60,8 +60,8 @@ body
     display: inline-block
     top: 100%
     width: 100%
-    border-left: 49vw solid transparent
-    border-right: 49vw solid transparent
+    border-left: 48vw solid transparent
+    border-right: 48vw solid transparent
     border-top: 50px solid #15C4CB
     box-sizing: border-box
 
@@ -86,8 +86,8 @@ body
     display: inline-block
     top: 100%
     width: 100%
-    border-left: 49vw solid transparent
-    border-right: 49vw solid transparent
+    border-left: 48vw solid transparent
+    border-right: 48vw solid transparent
     border-top: 50px solid #F7F7F7
     box-sizing: border-box
 
@@ -188,8 +188,8 @@ hr
     display: inline-block
     top: 100%
     width: 100%
-    border-left: 49vw solid transparent
-    border-right: 49vw solid transparent
+    border-left: 48vw solid transparent
+    border-right: 48vw solid transparent
     border-top: 50px solid #ffffff
     box-sizing: border-box
 
@@ -300,6 +300,7 @@ hr
   footer
     p
       font-size: 12px
+      margin-bottom: 20px
       &.back-to-top
         cursor: pointer
         padding-left: 10px
@@ -338,6 +339,15 @@ hr
         border-bottom: 2px solid #F25A2A
 
 @media (max-width: $screen-xs-max)
+  #hero
+    .hero-text
+      margin: 10px !important
+      font-size: 10px !important
+      color: #ffffff
+    .slogan-one
+      font-size: 14px !important
+    .slogan-two
+      font-size: 10px !important
   #companies
     .intro
       h2
